# bastuflotten

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: bookings.db
src/bastuflotten/: __init__.py  app.py  commands.py  db.py  formatting.py  modals.py
